--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ nav{
 .macrosection{
     height: 900px;
     background-color: aqua;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -68,9 +68,18 @@ nav{
 }
 
 .titolo {
-   flex-basis: 70%;
-   /* height: 30%; */
+    margin-top: 100px;
+    /* text-align: center; */
+    font-size: 40px;
+    margin-top: 100px;
+    margin-left: 15%;
+    margin-right: 15%;
+    display: flex;
+    
     }
+    
+
+
     .selezioni{
         background-color: darkorange;
         height: 100px;
