--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ nav{
     background-color: rgb(73, 73, 234);
     text-decoration: none;
     color: white;
-    padding: 5%;
+    padding: 2%;
     max-width: 70%;
     text-align: center;
     
@@ -78,9 +78,7 @@ main{
     
 }
 .macrosection div {
-    /* background-color: white; */
-    /* border: 1px solid black; */
-    height: 50%;
+     height:40%;
     /* width: 35%;    */
     
 }
@@ -133,31 +131,32 @@ main{
     }
     
     /* sezione grande  */
-    .cella-totale {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        border: 1px solid black;
-        flex-basis: 17%;
-        margin: 3% 3%;
-        padding: 1%;
-        position: relative;
-
-        
-    }
+    
  #sezione-grande {
-   height: 1600px;
+   height: 1500px;
    background-color: white;
-   margin-top: 0;
-   gap: 10%;
+   margin: 0;
+   /* gap: 10%; */
    display: flex;
-    /* flex-wrap: wrap; */
     justify-content: center;
     align-items: center;
  }
+ .cella-totale {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border: 1px solid black;
+    flex-basis: 22%;
+    margin: 3% 3%;
+    margin-bottom: 0;
+    padding: 1%;
+    position: relative;
+
+    
+}
  #sezione-grande div{
        
-    width: 25%;
+    /* width: 25%; */
  }
  #sezione-grande li{
     list-style:  none;
@@ -166,13 +165,23 @@ main{
     
  }
  #blueoption-minisez{
-    /* align-self: center; */
+    align-self: center;
  }
  /* cella orizzontale */
- #cella-orizzontale{
-   background-color: rgb(33, 114, 172);
+ .orizzontale{
+   background-color: rgb(252, 253, 254);
    flex-basis: 70%;
- }
+   display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+   
+   }
+  
+   .orizzontale a{
+    position: absolute;
+    top: 10%;
+    right: 10%;
+   }
 /* regole titolo cella */
 .titolo-cella {
     background-color: white;
@@ -186,26 +195,33 @@ main{
 }
 /* regole minisezione*/
 .minisezione{
-    background-color: yellow;
-    height: 450px;
+    background-color: rgb(255, 255, 255);
+    height: 750px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.minisezione span{
+.minisezione section{
     height: 70%;
-    border: 1px solid black;
-    border-style: dashed;
+    /* border: 1px solid black;
+    border-style: dashed; */
    }
 
 .minisezione :first-child{
-    background-color: rgb(12, 161, 9);
+    
     flex-basis: 45%;
 }
+.minisezione img{
+   max-width: 100%;
+}
 .minisezione :last-child {
-    background-color: fuchsia;
+    /* background-color: fuchsia; */
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
     flex-basis: 30%;
+    padding: 5%;
     
 }
 /* fine regole minisezione */
@@ -214,6 +230,7 @@ main{
 #postmini {
     font-size: 30px;
     background-color: orangered;
+    text-align: center;
 
 }
 /* regole sezione drop operations */
