--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,16 @@ nav{
 .header-section{
     display: flex;
     height: 100px;
-    
+       
     
 }
 /* regole div del nav */
 .header-section div {
     height: 100%;
     display: flex;
+    
     align-items: center;
-    padding: 2%;
+     margin: 0 2%;
     
 }
 .header-section div:hover {
@@ -56,7 +57,7 @@ nav{
     background-color: rgb(73, 73, 234);
     text-decoration: none;
     color: white;
-    padding: 2%;
+    /* padding: 2%; */
     max-width: 70%;
     text-align: center;
     
@@ -64,7 +65,7 @@ nav{
 /* regole main */
 
 main{
-    background-color: rgb(143, 238, 238);
+    /* background-color: rgb(143, 238, 238); */
 }
 /* regole jumbo */
 .macrosection{
@@ -85,21 +86,22 @@ main{
 /* regolo titolo jumbo */
 .titolo {
     margin-top: 100px;
-    background-color: rgb(143, 238, 238);
+    
     font-size: 32px;
-    margin-top: 100px;
     margin-left: 15%;
     margin-right: 15%;
-    display: flex;
+    padding-top: 50px;
+    /* display: flex; */
     
     }
     .colonna-jumbo{
-        position: relative;
+        /* position: relative; */
         width: 30%;
         display: flex;
         flex-direction: column;
-        
-        /* justify-content: space-between; */
+        justify-content: space-between;
+        margin-top: 5%;
+       
         
     }
     #arrow{
@@ -108,9 +110,10 @@ main{
         font-size: 100px;
         
         }
-    
+    /* immagine jumbo */
     .jumbo-image {
         width: 40%;
+        margin-top: 5%;
        
     }
     .jumbo-image img{
@@ -129,35 +132,45 @@ main{
         justify-content: flex-end;
         gap: 10%;
     }
+    .selezioni h2{
+        font-size: 25px;
+    }
     
     /* sezione grande  */
     
  #sezione-grande {
    height: 1500px;
    background-color: white;
-   margin: 0;
+   margin: 5% 10%;
+   
    /* gap: 10%; */
    display: flex;
     justify-content: center;
-    align-items: center;
+    justify-content: space-around;
+    /* align-items: center; */
  }
  .cella-totale {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     border: 1px solid black;
     flex-basis: 22%;
-    margin: 3% 3%;
+    /* margin: 3% 3%; */
     margin-bottom: 0;
     padding: 1%;
-    position: relative;
+    /* position: relative; */
 
     
 }
- #sezione-grande div{
-       
-    /* width: 25%; */
- }
+/* regole titolo cella */
+.titolo-cella {
+    background-color: white;
+    border-bottom: 1px solid black;
+    border-width: 100%;
+    text-align: center;
+           
+}
+ 
  #sezione-grande li{
     list-style:  none;
     font-size: 15px;
@@ -171,9 +184,9 @@ main{
  .orizzontale{
    background-color: rgb(252, 253, 254);
    flex-basis: 70%;
-   display: flex;
+   /* display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between; */
    
    }
   
@@ -182,17 +195,7 @@ main{
     top: 10%;
     right: 10%;
    }
-/* regole titolo cella */
-.titolo-cella {
-    background-color: white;
-    border: 1px solid black;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-        
-}
+
 /* regole minisezione*/
 .minisezione{
     background-color: rgb(255, 255, 255);
