--- a/css/style.css
+++ b/css/style.css
@@ -9,34 +9,36 @@ body{
 /* regole header */
 header {
     height: 100px;
-    
     position: fixed;    
     top: 0;
-    left: 0;
-    width: 100%;
+   
+    right: 0;
+    min-width: 100%;
     z-index: 900;
-
+   
+    
 }
 /* regole nav */
 nav{
     display: flex;
+    width: 100%;
     justify-content: space-between;
-    /* margin: 0 1%; */
-    background-color: white;
-   
+   background-color: white;
 }
 /* regole sezioni del nav */
 .header-section{
     display: flex;
     height: 100px;
-       
-    
+    width: 100%;  
+}
+.destra{
+    justify-content: flex-end;
 }
 /* regole div del nav */
 .header-section div {
     height: 100%;
     display: flex;
-    
+    flex-wrap: nowrap;
     align-items: center;
      margin: 0 2%;
     
@@ -64,14 +66,11 @@ nav{
 }
 /* regole main */
 
-main{
-    /* background-color: rgb(143, 238, 238); */
-}
+
 /* regole jumbo */
 .macrosection{
     /* height: 600px; */
     background-color: rgb(143, 238, 238);
-    /* margin-top: 100px; */
     margin-bottom: -4%;
     display: flex;
     flex-wrap: wrap;
@@ -142,12 +141,9 @@ main{
    height: 1500px;
    background-color: white;
    margin: 5% 10%;
-   
-   /* gap: 10%; */
    display: flex;
     justify-content: center;
     justify-content: space-around;
-    /* align-items: center; */
  }
  .cella-totale {
     display: flex;
@@ -155,10 +151,8 @@ main{
     justify-content: space-between;
     border: 1px solid black;
     flex-basis: 22%;
-    /* margin: 3% 3%; */
     margin-bottom: 0;
     padding: 1%;
-    /* position: relative; */
 
     
 }
@@ -166,16 +160,13 @@ main{
 .titolo-cella {
     background-color: white;
     border-bottom: 1px solid black;
-    border-width: 100%;
     text-align: center;
-           
 }
  
  #sezione-grande li{
     list-style:  none;
     font-size: 15px;
     gap: 10%;
-    
  }
  #blueoption-minisez{
     align-self: center;
@@ -184,14 +175,14 @@ main{
  .orizzontale{
    background-color: rgb(252, 253, 254);
    flex-basis: 70%;
-   /* display: flex;
+   position: relative;
     flex-direction: column;
     justify-content: space-between; */
-   
    }
   
    .orizzontale a{
     position: absolute;
+    padding: 3%;
     top: 10%;
     right: 10%;
    }
@@ -207,8 +198,7 @@ main{
 
 .minisezione section{
     height: 70%;
-    /* border: 1px solid black;
-    border-style: dashed; */
+   
    }
 
 .minisezione :first-child{
@@ -219,10 +209,8 @@ main{
    max-width: 100%;
 }
 .minisezione :last-child {
-    /* background-color: fuchsia; */
     display: flex;
     flex-direction: column;
-    justify-content: baseline;
     flex-basis: 30%;
     padding: 5%;
     
@@ -232,8 +220,6 @@ main{
 /* regole titoletto prima drop operations */
 #postmini {
     font-size: 35px;
-    /* background-color: orangered; */
-    /* text-align: center; */
     margin-left: 15%;
     
 
@@ -247,7 +233,6 @@ main{
     flex-wrap: wrap;
     
     justify-content: space-around;
-    /* gap: 3%; */
     margin-top: 5%;
 }
 .drop-operation div {
@@ -265,16 +250,34 @@ footer{
 }
 .footersection {
     height: 400px;
-    background-color: rgb(44, 190, 30);
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 3%;
+    position: relative;
     
 }
 .footersection div {
-    background-color: rgb(220, 26, 51);
     border: 1px solid black;
-    border-style: dashed;
+    border-style: dashed; */
     width: 12%;
+    margin-top: 3%;
     }
+    .footersection h3{
+        color: white;
+    }
+    .footersection ul{
+        list-style:  none;
+        margin-top: 10%;
+        line-height: 28px;
+        color: gray;
+    }
+    #seleziona-lingua {
+       position: absolute;
+       bottom: 13%;
+       left: 15%;
+       color: gray;
+       background-color: black;
+    }
+    
