--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,9 @@ nav{
     text-decoration: none;
     color: white;
     padding: 4%;
-    max-width: 70%;
+    /* max-width: 70%; */
     text-align: center;
+    height: fit-content;
     
 }
 /* regole main */
@@ -139,14 +140,17 @@ nav{
  .cella-totale {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     border: 1px solid black;
+    min-height: 50%;
+    /* gap: 3% 0; */
     flex-basis: 22%;
     padding: 1%;
 }
 .cella-totale i{
     margin-right: 5%;
 }
+
 /* regole titolo cella */
 .titolo-cella {
     background-color: white;
@@ -155,6 +159,9 @@ nav{
     padding-bottom:5px ;
    
 }
+.graysub {
+    color: gray;
+}
  /* regole lista cella */
  #sezione-grande li{
     list-style:  none;
@@ -162,16 +169,22 @@ nav{
     gap: 10%;
  }
  #blueoption-minisez{
-    align-self: center;
+    /* align-self: center; */
  }
  /* cella orizzontale */
  .orizzontale{
    background-color: rgb(252, 253, 254);
-   flex-basis: 70%;
-    /* flex-direction: column; */
-    justify-content: space-around; */
-    
+   margin-top: 5% ;
+   flex-basis: 80%;
+   min-height: 10%;
+   display: flex;
+   justify-content: space-between;
+   }
+.titolo-button{
+    display: flex;
+    justify-content: space-between;
 }
+
 /* regole minisezione*/
 .minisezione{
     background-color: rgb(255, 255, 255);
