--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,6 @@ nav{
     text-decoration: none;
     color: white;
     padding: 4%;
-    /* max-width: 70%; */
     text-align: center;
     height: fit-content;
     
@@ -71,7 +70,6 @@ nav{
 
 /* regole jumbo */
 .macrosection{
-    /* height: 600px; */
     background-color: rgb(143, 238, 238);
     margin-bottom: -4%;
     display: flex;
@@ -79,9 +77,7 @@ nav{
     justify-content: center;
     
 }
-.macrosection div {
-     height:40%;
-}
+
 /* regolo titolo jumbo */
 .titolo {
     margin-top: 100px;
@@ -116,7 +112,7 @@ nav{
     }
     .selezioni{
         background-color: rgb(255, 255, 255);
-        height: 150px;
+        margin-top: 100px;
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -130,7 +126,6 @@ nav{
     /* sezione grande  */
     
  #sezione-grande {
-   height: 1400px;
    background-color: white;
    margin: 5% 10%;
    display: flex;
@@ -142,13 +137,16 @@ nav{
     flex-direction: column;
     justify-content: space-between;
     border: 1px solid black;
-    min-height: 50%;
-    /* gap: 3% 0; */
+    line-height: 200%;
     flex-basis: 22%;
     padding: 1%;
 }
 .cella-totale i{
-    margin-right: 5%;
+    padding-left: 10px;
+}
+.cella-totale li{
+    display: flex;
+    line-height: 23px;
 }
 
 /* regole titolo cella */
@@ -168,15 +166,12 @@ nav{
     font-size: 15px;
     gap: 10%;
  }
- #blueoption-minisez{
-    /* align-self: center; */
- }
+
  /* cella orizzontale */
  .orizzontale{
    background-color: rgb(252, 253, 254);
    margin-top: 5% ;
    flex-basis: 80%;
-   min-height: 10%;
    display: flex;
    justify-content: space-between;
    }
@@ -184,18 +179,19 @@ nav{
     display: flex;
     justify-content: space-between;
 }
+#blueorizzontale {
+    padding: 1%;
+}
 
 /* regole minisezione*/
 .minisezione{
     background-color: rgb(255, 255, 255);
-    height: 750px;
     display: flex;
     justify-content: center;
     align-items: center;
+    /* margin-bottom: 20px; */
 }
-.minisezione section{
-    height: 70%;
-   }
+
 .minisezione :first-child{
     flex-basis: 45%;
 }
@@ -217,8 +213,9 @@ nav{
 }
 /* regole sezione drop operations */
 .drop-operation {
-    height: 1200px;
+    /* height: 1200px; */
     width: 70%;
+    
     margin-left: 15%;
     display: flex;
     flex-wrap: wrap;
@@ -233,17 +230,13 @@ nav{
     margin: 0 auto;
 }
 /* regole footer */
-footer{
-    
-}
 .footersection {
-    height: 400px;
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 3%;
-    position: relative;
+    margin-top: 5%;
 }
 .footersection div {
     border: 1px solid black;
@@ -260,11 +253,5 @@ footer{
         line-height: 28px;
         color: gray;
     }
-    #seleziona-lingua {
-       position: absolute;
-       bottom: 13%;
-       left: 15%;
-       color: gray;
-       background-color: black;
-    }
+    
     
